Cycles: This smoke volume crashes Blender in preview rendered view #54202

Closed
opened 2018-03-02 16:56:20 +01:00 by YAFU · 4 comments

System Information
Kubuntu Linux 18.04 - i73770 - GTX 960 4GB

Blender Version
Broken: 2.79 from buildbot - 341ab45f7b

Short description of error
Blender Crash with "Segmentation fault (core dumped)" message in terminal with the following file in the situation explained below
Ink Drop.blend

Exact steps for others to reproduce the error
Open the file in Blender, Bake the simulation (maybe save the file, I'm not sure). Now change to Rendered View (preview). Now in Timeline press the button "Jump to first frame..." (Scene is in 150 frame by default when open). Blender Crash.

**System Information** Kubuntu Linux 18.04 - i73770 - GTX 960 4GB **Blender Version** Broken: 2.79 from buildbot - 341ab45f7b1 **Short description of error** Blender Crash with "Segmentation fault (core dumped)" message in terminal with the following file in the situation explained below [Ink Drop.blend](https://archive.blender.org/developer/F2389266/Ink_Drop.blend) **Exact steps for others to reproduce the error** Open the file in Blender, Bake the simulation (maybe save the file, I'm not sure). Now change to Rendered View (preview). Now in Timeline press the button "Jump to first frame..." <Shift Ctrl Down Arrow> (Scene is in 150 frame by default when open). Blender Crash.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

This issue was referenced by blender/cycles@1ea151032f

This issue was referenced by blender/cycles@1ea151032f99e74b2e58f63fce0ac5dc9f013c9d

This issue was referenced by 94b99949eb

This issue was referenced by 94b99949eb20d630e222642a7e7db5ea4d43ef12

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54202
No description provided.