Fix T54202: Cycles crash rendering empty mesh volume after recent optimization.